--- a/.github/workflows/lab-shell-humble.yml
+++ b/.github/workflows/lab-shell-humble.yml
@@ -7,24 +7,21 @@ on:
     branches: 
       - main
     paths:
-      - irs_shell/** # The path to your custom package
-      - Dockerfile       # Assuming your Dockerfile is in the root
+      - lab_shell_docker/**
       - .github/workflows/lab-shell-humble.yml
 
   pull_request:
     branches: 
       - main
     paths:
-      - irs_shell/**
-      - Dockerfile
+      - lab_shell_docker/**
       - .github/workflows/lab-shell-humble.yml
 
 env:
   REGISTRY: ghcr.io
-  OWNER: hugh-uc
+  OWNER: Hugh-UC
   IMAGE_NAME: irs_2025_01
 
-# https://docs.github.com/en/actions/using-jobs/using-concurrency
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -42,7 +39,7 @@ jobs:
           sudo rm -rf /usr/share/dotnet
           sudo rm -rf "$AGENT_TOOLSDIRECTORY"
           
-      - name: Check out the repository
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up QEMU
@@ -52,7 +49,6 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to the Container registry
-        # The GITHUB_TOKEN has permission to publish to GHCR for the repo it originated from.
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
@@ -62,8 +58,8 @@ jobs:
       - name: Build and Push
         uses: docker/build-push-action@v5
         with:
-          context: . # This path should be the root of your repository
-          file: Dockerfile
+          context: .
+          file: lab_shell_docker/Dockerfile
           platforms: linux/amd64
           push: true
           tags: |
