--- a/.github/workflows/lab-shell-humble.yml
+++ b/.github/workflows/lab-shell-humble.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Build and Push
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: ./lab_shell_docker
           file: lab_shell_docker/Dockerfile
           platforms: linux/amd64
           push: true
