--- a/.github/workflows/lab-shell-humble.yml
+++ b/.github/workflows/lab-shell-humble.yml
@@ -7,6 +7,7 @@ on:
     branches: 
       - main
     paths:
+      - '/**'
       - lab_shell_docker/**
       - .github/workflows/lab-shell-humble.yml
 
@@ -14,6 +15,7 @@ on:
     branches: 
       - main
     paths:
+      - '/**'
       - lab_shell_docker/**
       - .github/workflows/lab-shell-humble.yml
 
@@ -59,7 +61,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./lab_shell_docker
-          file: lab_shell_docker/Dockerfile
+          file: Dockerfile
           platforms: linux/amd64
           push: true
           tags: |
