--- a/.github/workflows/lab-shell-humble.yml
+++ b/.github/workflows/lab-shell-humble.yml
@@ -61,7 +61,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./lab_shell_docker/Dockerfile
+          file: /lab_shell_docker/Dockerfile
           platforms: linux/amd64
           push: true
           tags: |
