Update Dockerfile working directory to 'root'.

--- a/lab_shell_docker/Dockerfile
+++ b/lab_shell_docker/Dockerfile
@@ -9,8 +9,6 @@ ENV RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
 ENV ROS_DOMAIN_ID=0
 ENV DEBIAN_FRONTEND=noninteractive
 
-ENV WORKSPACE_ROOT=/root/irslab_ws
-
 # Install development tools and useful utilities
 # The `&&` links commands together to reduce the number of image layers
 RUN apt-get update && \
@@ -67,7 +65,7 @@ RUN apt-get update && \
 RUN echo "source /opt/ros/humble/setup.bash" >> /root/.bashrc
 
 # Create a directory for your ROS 2 workspace
-WORKDIR ${WORKSPACE_ROOT}
+WORKDIR /
 
 # Optional: custom entrypoint (make sure this script exists)
 COPY /workspace_entrypoint.sh /workspace_entrypoint.sh
