Update Dockerfile working directory to 'root' + cmd.

--- a/lab_shell_docker/Dockerfile
+++ b/lab_shell_docker/Dockerfile
@@ -76,4 +76,4 @@ RUN chmod +x /workspace_entrypoint.sh
 ENTRYPOINT ["/workspace_entrypoint.sh"]
 
 # Set the default command to keep the container running
-CMD ["bash"]        # depricated: CMD ["tail", "-f", "/dev/null"]
+CMD ["bash", "-l"]        # depricated: CMD ["tail", "-f", "/dev/null"]
