--- a/lib/compose.override.yaml
+++ b/lib/compose.override.yaml
@@ -1,7 +1,7 @@
 services:
   lab-shell:
     container_name: lab-shell
-    image: ghcr.io/hugh-uc/irs_2025_01:humble
+    image: ghcr.io/hugh-uc/irs-2025-01:humble
 
     # Keep the container running and allow interactive sessions
     tty: true
