--- a/lib/compose.override.yaml
+++ b/lib/compose.override.yaml
@@ -3,22 +3,24 @@ services:
     container_name: lab-shell
     image: ghcr.io/hugh-uc/irs-lab-shell:humble
 
-    # Keep the container running and allow interactive sessions
+    # allocates pseudo-terminal & keeps input stream open
     tty: true
     stdin_open: true
 
-    # Use host networking to join the same network space as the other containers.
+    # provide a command for the entrypoint script
+    command: bash -l
+
+    # host networking to interact with other containers
     network_mode: host
 
-    # Volume mapping remains the same and is crucial for your workflow.
-    # It links your local code folder to the container's workspace.
+    # volume mapping for local folder links
     volumes:
       - PLACEHOLDER:/root/irslab_ws/src
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
       - /etc/localtime:/etc/localtime:ro
       - /dev:/dev
 
-    # Set the environment variables required for graphics and ROS
+    # set the environment variables required for graphics and ROS
     environment:
       - DISPLAY
       - QT_X11_NO_MITSHM=1
@@ -27,6 +29,7 @@ services:
       - ROS_DOMAIN_ID=0
       - PYTHONUNBUFFERED=1
 
+    # sets the script that will be executed (container's main process)
     entrypoint: /workspace_entrypoint.sh
 
     privileged: true
