Update Dockerfile package list | include: 'rqt-tf-tree'

--- a/lab_shell_docker/Dockerfile
+++ b/lab_shell_docker/Dockerfile
@@ -42,6 +42,7 @@ RUN apt-get update && \
     ros-humble-navigation2 \
     ros-humble-nav2-simple-commander \
     ros-humble-tf2-tools \
+    ros-humble-rqt-tf-tree \
     libx11-6 \
     libxext6 \
     libxrender1 \
