--- a/src/.v1.0.0/pick_nav_place/package.xml
+++ b/src/.v1.0.0/pick_nav_place/package.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>hand_solo_arm</name>
-  <version>1.0.0</version>
-  <description>ROS 2 Package: Provides high-level action interfaces for planning/executing joint trajectories/motions for the Omron MoMa robotic arm using MoveIt.</description>
-  <maintainer email="hugh.br3nn4n@gmail.com">root</maintainer>
-  <license>Apache-2.0</license>
+  <name>pick_nav_place</name>
+  <version>0.0.0</version>
+  <description>TODO: Package description</description>
+  <maintainer email="root@todo.todo">root</maintainer>
+  <license>TODO: License declaration</license>
 
+  <exec_depend>ros2launch</exec_depend>
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
+  <exec_depend>slam_toolbox</exec_depend>
+  <exec_depend>rviz2</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
   <depend>rclpy</depend>
+  <depend>std_msgs</depend>
+  <depend>std_srvs</depend>
   <depend>action_msgs</depend>
   <depend>moveit_msgs</depend>
   <depend>trajectory_msgs</depend>
