--- a/src/hand_solo_virtual_nav/package.xml
+++ b/src/hand_solo_virtual_nav/package.xml
@@ -2,9 +2,9 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>hand_solo_virtual_nav</name>
-  <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="root@todo.todo">root</maintainer>
+  <version>1.0.0</version>
+  <description>ROS 2 Package: Containins the core launch files for starting the navigation-related nodes (SLAM, localization, and visualization) necessary for the Omron MoMa mobile base.</description>
+  <maintainer email="hugh.br3nn4n@gmail.com">root</maintainer>
   <license>Apache-2.0</license>
 
   <test_depend>ament_copyright</test_depend>
