--- a/src/pick_nav_place/package.xml
+++ b/src/pick_nav_place/package.xml
@@ -2,10 +2,10 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>pick_nav_place</name>
-  <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="root@todo.todo">root</maintainer>
-  <license>TODO: License declaration</license>
+  <version>2.0.0</version>
+  <description>ROS 2 Package: Containins necessary nodes for completing the Pineapple Grand Challenge; coordinating robot arm pick-and-place with Nav2 navigation (for Omron MoMa).</description>
+  <maintainer email="hugh.br3nn4n@gmail.com">root</maintainer>
+  <license>Apache-2.0</license>
 
   <exec_depend>ros2launch</exec_depend>
   <test_depend>ament_copyright</test_depend>
@@ -21,7 +21,7 @@
   <depend>action_msgs</depend>
   <depend>moveit_msgs</depend>
   <depend>trajectory_msgs</depend>
-
+  <depend>pnp_interfaces</depend>
 
   <export>
     <build_type>ament_python</build_type>
